--- a/index.html
+++ b/index.html
@@ -17,34 +17,74 @@
         </div>
         <div class="calculator-container">
             <div class="row-container">
-                <button class="operand-button">O</button>
-                <button class="operand-button">C</button>
-                <button class="operand-button">&radic;</button>
-                <button class="operand-button">%</button>
+                <button class="operator-btn">
+                    <span id="off-btn">O</span>
+                </button>
+                <button class="operator-btn">
+                    <span id="clear-btn">C</span>
+                </button>
+                <button class="operator-btn">
+                    <span class="sqrt-btn">&radic;</span>
+                </button>
+                <button class="operator-btn">
+                    <span class="remainder-btn">%</span>
+                </button>
             </div>
             <div class="row-container">
-                <button class="operand-button">7</button>
-                <button class="operand-button">8</button>
-                <button class="operand-button">9</button>
-                <button class="operand-button">&times;</button>
+                <button class="operand-btn">
+                    <span class="seven-btn">7</span>
+                </button>
+                <button class="operand-btn">
+                    <span class="eight-btn">8</span>
+                </button>
+                <button class="operand-btn">
+                    <span class="nine-btn">9</span>
+                </button>
+                <button class="operator-btn">
+                    <span class="multiply-btn">&times;</span>
+                </button>
             </div>
             <div class="row-container">
-                <button class="operand-button">4</button>
-                <button class="operand-button">5</button>
-                <button class="operand-button">6</button>
-                <button class="operand-button">&divide;</button>
+                <button class="operand-btn">
+                    <span class="four-btn">4</span>
+                </button>
+                <button class="operand-btn">
+                    <span class="five-btn">5</span>
+                </button>
+                <button class="operand-btn">
+                    <span class="six-btn">6</span>
+                </button>
+                <button class="operator-btn">
+                    <span class="divide-btn">&divide;</span>
+                </button>
             </div>
             <div class="row-container">
-                <button class="operand-button">1</button>
-                <button class="operand-button">2</button>
-                <button class="operand-button">3</button>
-                <button class="operand-button">-</button>
+                <button class="operand -btn">
+                    <span class="one-btn">1</span>
+                </button>
+                <button class="operand-btn">
+                    <span class="two-btn">2</span>
+                </button>
+                <button class="operand-btn">
+                    <span class="three-btn">3</span>
+                </button>
+                <button class="operator-btn">
+                    <span class="subtract-btn">-</span>
+                </button>
             </div>
             <div class="row-container">
-                <button class="operand-button">0</button>
-                <button class="operand-button">.</button>
-                <button class="operand-button">=</button>
-                <button class="operand-button">+</button>
+                <button class="operand-btn">
+                    <span class="zero-btn">0</span>
+                </button>
+                <button class="operand-btn">
+                    <span class="decimal-btn">.</span>
+                </button>
+                <button class="operand-btn">
+                    <span class="equals-btn">=</span>
+                </button>
+                <button class="operator-btn">
+                    <span class="addition-btn">+</span>
+                </button>
             </div>
         </div>
     </div>
