added notes.txt, removed comments

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             </div>
             <div class="row-container">
                 <button class="operand-btn" value="0">0</button>
-                <button class="operand-btn" value="decimal">.</button>
+                <button class="operand-btn" value="">.</button>
                 <button id="equals-btn" value="equals">=</button>
                 <button class="operator-btn" value="add">+</button>
             </div>
